Resolve fake solution to gap problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,6 @@ nav h1 a {
 		margin-left: auto;
 		margin-right: auto;
 		/* margin-bottom: auto; */
-		margin-top: 5%;
 		text-align: center;
 	}
 
@@ -338,9 +337,6 @@ nav h1 a {
 		margin-bottom: 5%;
 	}
 
-	#page-content {
-		margin-top: -5%;
-	}
 }
 
 @media screen and (min-width: 431px) {
